===========================================================================
 This file describes changes in the IO package beginning from version 1.2:
===========================================================================

==========================
 Changes from 4.0 -> 4.1:
==========================

  - Make it compile on Windows.


==========================
 Changes from 3.3 -> 4.0:
==========================

  - Use new build setup using automake/autoconf/libtool
  - Move repository to git@git.gap-system.org/io
  - Updated the documentation of IO_select
  

==========================
 Changes from 3.2 -> 3.3:
==========================

  - Fixed a bug to compile on latest cygwin without warning.
  - Added IOHub functionality and documented it.
  - Hashserver example.
  - Cleanup autoconf configuration.


==========================
 Changes from 3.1 -> 3.2:
==========================

  - Remove the global function f which was accidentally put in there
    in 3.1.
  - Update cnf files for clang and to compile on GAP 4.4 and 4.5
  - Update cnf files to autoconf 2.65
  - Add functions gethostname and getsockname.
  - Change license to GPL 3


==========================
 Changes from 3.0 -> 3.1:
==========================

  - Fix documentation of /dev/random and /dev/urandom
  - Background jobs
  - Parallel patterns: ParMapReduce, ParTakeFirstResult, ParDo


==========================
 Changes from 2.3 -> 3.0:
==========================

  - Added ignoring of SIGPIPE for architectures where standard
    behaviour is to terminate the process.
  - Completely new configure process with our own autoconf scripts
  - IO_gettimeofday new
  - IO_gmtime and IO_localtime new
  - Check for IO_getpid and IO_getppid and IO_kill
  - Load dynamic module earlier (in init.g at the beginning)
  - Release revision 342 as 3.0: 8.4.2009


==========================
 Changes from 2.2 -> 2.3:
==========================

  - Require GAP >= 4.4.9 in PackageInfo.g