@@ -3,6 +3,15 @@
 ===========================================================================
 
 ==========================
+ Changes from 4.1 -> 4.2:
+==========================
+
+  - Fix behaviour of IO_select to try again if the system call was
+    interrupted. This fixes an infinite loop bug in
+    ParTakeFirstResultByFork.
+
+
+==========================
  Changes from 4.0 -> 4.1:
 ==========================
 
